# stm32h7-rust-application-template

./: Cargo.toml  README.md  memory.x2
.cargo/: config
src/: main.rs
