[package]
name = "h7sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.12"
stm32h7xx-hal = {version = "0.11.0", features = ["stm32h743v","rt"]} 
panic-halt="^0.2.0"
log="0.4.11"
